crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_completion_popup.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│                                               ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ processes ──────────╮
│                                               ││no managed processes │
│                                               ││                     │
╭ 2 matches · Tab ───────────────────────────────╮                     │
│/github:review-pr  <pr-number-or-url> [filename]│                     │
│/git:setup-worktree  set up a new worktree      │─────────────────────╯
╰────────────────────────────────────────────────╯
╭ Enter send · Shift+Enter newline · ↑↓ history · /help · Ctrl-C menu ─╮
│/gi                                                                   │
╰──────────────────────────────────────────────────────────────────────╯
