crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_done.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
┌ cowboy ──────────────────────────────────────────────────┐
│✓ Implemented the fix; tests pass.                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
   done — finished
┌ session finished — press q to quit ──────────────────────┐
│>                                                         │
└──────────────────────────────────────────────────────────┘
