crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_idle_ready_for_next_message.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› create a hello world                         ││no network activity  │
│                                               ││yet                  │
│✓ Done — created main.rs.                      ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ processes ──────────╮
│                                               ││no managed processes │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready
╭ Enter send · Shift+Enter newline · ↑↓ history · /help · Ctrl-C menu ─╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
