crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_indicators_diff_and_processes.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy · 20260614-abcd ───────────────────────╮╭ network ────────────╮
│› start the dev server                         ││no network activity  │
│                                               ││yet                  │
│✓ Server running on :3000.                     ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││web          running │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready                                            Δ 2f +30 -4
╭ Enter send · Shift+Enter newline · ↑↓ history · /help · Ctrl-C menu ─╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
