crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_paused_menu.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› do work                                      ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│                                               ││                     │
│   ╭ Paused ──────────────────────────────────────────────────────╮   │
│   │Agent paused.                                                 │   │
│   │                                                              │───╯
│   │[r]esume  [i]nstruct  [k]ill command  [d]etach  [e]nd session │───╮
│   │                                                              │es │
│   │                                                              │   │
│   ╰──────────────────────────────────────────────────────────────╯   │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   paused — ready
╭ Enter send · Shift+Enter newline · /help · Ctrl-C interrupt ─────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
