crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_plan_pane.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy · 20260614-abcd ───────────────────────╮╭ plan 1/3 ───────────╮
│› refactor the parser                          ││✓ read the existing  │
│                                               ││parser               │
│                                               ││▸ extract the        │
│                                               │╰─────────────────────╯
│                                               │╭ network ────────────╮
│                                               ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
⠷  running — working
╭ Enter send · Shift+Enter newline · /help · Ctrl-C interrupt ─────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
