crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_running_with_panes.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› fix the failing test                         ││ask example.com:443  │
│                                               ││                     │
│$ cargo test                                   ││                     │
│  test result: FAILED                          ││                     │
│                                               ││                     │
│Looking at the failure...                      ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ processes ──────────╮
│                                               ││no managed processes │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
⠷  running — exec: cargo test
╭ Enter send · Shift+Enter newline · /help · Ctrl-C interrupt ─────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
