crates/cowboy-tui/src/snapshots/cowboy_tui__app__tests__snapshot_token_total_in_status_bar.snap
---
source: crates/cowboy-tui/src/app.rs
expression: render(&app)
---
╭ ~/dev/cowboy  ⎇ main ─────────────────────────╮╭ network ────────────╮
│› refactor the parser                          ││no network activity  │
│                                               ││yet                  │
│✓ Done.                                        ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready                             ~128k↑ 9.1k↓   Δ 2f +30 -4
╭ Enter send · Shift+Enter newline · ↑↓ history · /help · Ctrl-C menu ─╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
